// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseAttributes (empty) 1`] = `
Object {
  "attributes": Array [],
  "index": 0,
}
`;

exports[`parseAttributes <script lang="ts"> 1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 17,
      "metadata": null,
      "name": "lang",
      "parent": null,
      "start": 8,
      "type": "Attribute",
      "value": Array [
        Object {
          "data": "ts",
          "end": 16,
          "parent": null,
          "raw": "ts",
          "start": 14,
          "type": "Text",
        },
      ],
    },
  ],
  "index": 17,
}
`;

exports[`parseAttributes <script lang='ts'> 1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 17,
      "metadata": null,
      "name": "lang",
      "parent": null,
      "start": 8,
      "type": "Attribute",
      "value": Array [
        Object {
          "data": "ts",
          "end": 16,
          "parent": null,
          "raw": "ts",
          "start": 14,
          "type": "Text",
        },
      ],
    },
  ],
  "index": 17,
}
`;

exports[`parseAttributes <script lang=ts> 1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 15,
      "metadata": null,
      "name": "lang",
      "parent": null,
      "start": 8,
      "type": "Attribute",
      "value": Array [
        Object {
          "data": "ts",
          "end": 15,
          "parent": null,
          "raw": "ts",
          "start": 13,
          "type": "Text",
        },
      ],
    },
  ],
  "index": 15,
}
`;

exports[`parseAttributes <style global/> 1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 13,
      "metadata": null,
      "name": "global",
      "parent": null,
      "start": 7,
      "type": "Attribute",
      "value": true,
    },
  ],
  "index": 13,
}
`;

exports[`parseAttributes <style global> 1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 13,
      "metadata": null,
      "name": "global",
      "parent": null,
      "start": 7,
      "type": "Attribute",
      "value": true,
    },
  ],
  "index": 13,
}
`;

exports[`parseAttributes attr   1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 4,
      "metadata": null,
      "name": "attr",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": true,
    },
  ],
  "index": 6,
}
`;

exports[`parseAttributes attr  =  "value" 1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 16,
      "metadata": null,
      "name": "attr",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "data": "value",
          "end": 15,
          "parent": null,
          "raw": "value",
          "start": 10,
          "type": "Text",
        },
      ],
    },
  ],
  "index": 16,
}
`;

exports[`parseAttributes attr 1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 4,
      "metadata": null,
      "name": "attr",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": true,
    },
  ],
  "index": 4,
}
`;

exports[`parseAttributes attr="value" 1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 12,
      "metadata": null,
      "name": "attr",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "data": "value",
          "end": 11,
          "parent": null,
          "raw": "value",
          "start": 6,
          "type": "Text",
        },
      ],
    },
  ],
  "index": 12,
}
`;

exports[`parseAttributes empty=""   1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 8,
      "metadata": null,
      "name": "empty",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "data": "",
          "end": 7,
          "parent": null,
          "raw": "",
          "start": 7,
          "type": "Text",
        },
      ],
    },
  ],
  "index": 10,
}
`;

exports[`parseAttributes empty=''   1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 8,
      "metadata": null,
      "name": "empty",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "data": "",
          "end": 7,
          "parent": null,
          "raw": "",
          "start": 7,
          "type": "Text",
        },
      ],
    },
  ],
  "index": 10,
}
`;

exports[`parseAttributes expr="{true}"   1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 13,
      "metadata": null,
      "name": "expr",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "end": 13,
          "expression": Object {
            "end": 11,
            "leadingComments": Array [],
            "raw": "true",
            "start": 7,
            "type": "Literal",
            "value": true,
          },
          "metadata": null,
          "parent": null,
          "start": 5,
          "type": "ExpressionTag",
        },
      ],
    },
  ],
  "index": 15,
}
`;

exports[`parseAttributes expr='{true}'   1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 13,
      "metadata": null,
      "name": "expr",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "end": 13,
          "expression": Object {
            "end": 11,
            "leadingComments": Array [],
            "raw": "true",
            "start": 7,
            "type": "Literal",
            "value": true,
          },
          "metadata": null,
          "parent": null,
          "start": 5,
          "type": "ExpressionTag",
        },
      ],
    },
  ],
  "index": 15,
}
`;

exports[`parseAttributes expr={"}"}   1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 10,
      "metadata": null,
      "name": "expr",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "end": 10,
          "expression": Object {
            "end": 9,
            "leadingComments": Array [],
            "raw": "\\"}\\"",
            "start": 6,
            "type": "Literal",
            "value": "}",
          },
          "metadata": null,
          "parent": null,
          "start": 5,
          "type": "ExpressionTag",
        },
      ],
    },
  ],
  "index": 12,
}
`;

exports[`parseAttributes expr={"s"}   1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 10,
      "metadata": null,
      "name": "expr",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "end": 10,
          "expression": Object {
            "end": 9,
            "leadingComments": Array [],
            "raw": "\\"s\\"",
            "start": 6,
            "type": "Literal",
            "value": "s",
          },
          "metadata": null,
          "parent": null,
          "start": 5,
          "type": "ExpressionTag",
        },
      ],
    },
  ],
  "index": 12,
}
`;

exports[`parseAttributes expr={/*}*/"}"}   1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 15,
      "metadata": null,
      "name": "expr",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "end": 15,
          "expression": Object {
            "end": 14,
            "leadingComments": Array [
              Object {
                "end": 11,
                "start": 6,
                "type": "Block",
                "value": "}",
              },
            ],
            "raw": "\\"}\\"",
            "start": 11,
            "type": "Literal",
            "value": "}",
          },
          "metadata": null,
          "parent": null,
          "start": 5,
          "type": "ExpressionTag",
        },
      ],
    },
  ],
  "index": 17,
}
`;

exports[`parseAttributes expr={/*}*///}
"}"}   1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 19,
      "metadata": null,
      "name": "expr",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "end": 19,
          "expression": Object {
            "end": 18,
            "leadingComments": Array [
              Object {
                "end": 11,
                "start": 6,
                "type": "Block",
                "value": "}",
              },
              Object {
                "end": 15,
                "start": 11,
                "type": "Line",
                "value": "}",
              },
            ],
            "raw": "\\"}\\"",
            "start": 15,
            "type": "Literal",
            "value": "}",
          },
          "metadata": null,
          "parent": null,
          "start": 5,
          "type": "ExpressionTag",
        },
      ],
    },
  ],
  "index": 21,
}
`;

exports[`parseAttributes expr={true}   1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 11,
      "metadata": null,
      "name": "expr",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "end": 11,
          "expression": Object {
            "end": 10,
            "leadingComments": Array [],
            "raw": "true",
            "start": 6,
            "type": "Literal",
            "value": true,
          },
          "metadata": null,
          "parent": null,
          "start": 5,
          "type": "ExpressionTag",
        },
      ],
    },
  ],
  "index": 13,
}
`;

exports[`parseAttributes quote="'"   1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 9,
      "metadata": null,
      "name": "quote",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "data": "'",
          "end": 8,
          "parent": null,
          "raw": "'",
          "start": 7,
          "type": "Text",
        },
      ],
    },
  ],
  "index": 11,
}
`;

exports[`parseAttributes quote='"'   1`] = `
Object {
  "attributes": Array [
    Object {
      "end": 9,
      "metadata": null,
      "name": "quote",
      "parent": null,
      "start": 0,
      "type": "Attribute",
      "value": Array [
        Object {
          "data": "\\"",
          "end": 8,
          "parent": null,
          "raw": "\\"",
          "start": 7,
          "type": "Text",
        },
      ],
    },
  ],
  "index": 11,
}
`;
